--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,21 @@ before_script:
   - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
   - cd $GOPATH/src/$REPO_NAME
   - go install gotest.tools/gotestsum@latest
+  - go install gopkg.in/yaml.v3
+  - go install github.com/opentracing/opentracing-go
+  - go install github.com/uber/jaeger-client-go
+  - go install github.com/pressly/goose/v3
+  - go install github.com/hashicorp/go-retryablehttp
   - go mod tidy
 
 stages:
   - test
+
+golangci_lint:
+  stage: test
+  image: golangci/golangci-lint:v1.43
+  script:
+    - golangci-lint run ./...
 
 unit_tests:
   stage: test
