--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,7 @@ variables:
   REPO_NAME: gitlab.ozon.dev/betkin/device-api
 
 before_script:
-  - mkdir -p $GOPATH/src/$(dirname $REPO_NAME)
-  - ln -svf $CI_PROJECT_DIR $GOPATH/src/$REPO_NAME
-  - cd $GOPATH/src/$REPO_NAME
+  - export GO111MODULE=auto
   - make deps
   - make build
   - go install gotest.tools/gotestsum@latest
