fix dependency proxi to project regestry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: gitlab-registry.ozon.dev/betkin/device-api/golang:1.16-alpine
+image: $CI_REGISTRY/golang:1.16-alpine
 
 variables:
   ADD_DATA: 'data from vars.yml'
@@ -14,6 +14,7 @@ stages:
 build:
   stage: build
   script:
+    - echo $CI_REGISTRY
     - echo "Build"
   rules:
     - if: $CI_COMMIT_TAG != null
@@ -38,7 +39,7 @@ linter:
 
 pre-commit:
   stage: build
-  image: gitlab-registry.ozon.dev/betkin/device-api/kiwicom/pre-commit
+  image: $CI_REGISTRY/kiwicom/pre-commit
   script:
     - echo "Run pre-commit"
   rules:
@@ -98,11 +99,11 @@ production:
 httptest:
   stage: e2e
   services:
-    - name: gitlab-registry.ozon.dev/betkin/device-api/postgres:12
+    - name: $CI_REGISTRY/postgres:12
       alias: postgres
-    - name: gitlab-registry.ozon.dev/betkin/device-api/confluentinc/cp-zookeeper:7.1.0
+    - name: $CI_REGISTRY/confluentinc/cp-zookeeper:7.1.0
       alias: zookeeper
-    - name: gitlab-registry.ozon.dev/betkin/device-api/confluentinc/cp-kafka:7.1.0
+    - name: $CI_REGISTRY/confluentinc/cp-kafka:7.1.0
       alias: kafka
   variables:
     # enable network
