try my registry #1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: $CI_REGISTRY/golang:1.16-alpine
+image: gitlab-registry.ozon.dev/betkin/device-api/golang:1.16-alpine
 
 variables:
   ADD_DATA: 'data from vars.yml'
@@ -39,7 +39,7 @@ linter:
 
 pre-commit:
   stage: build
-  image: $CI_REGISTRY/kiwicom/pre-commit
+  image: gitlab-registry.ozon.dev/betkin/device-api/kiwicom/pre-commit
   script:
     - echo "Run pre-commit"
   rules:
@@ -99,11 +99,11 @@ production:
 httptest:
   stage: e2e
   services:
-    - name: $CI_REGISTRY/postgres:12
+    - name: gitlab-registry.ozon.dev/betkin/device-api/postgres:12
       alias: postgres
-    - name: $CI_REGISTRY/confluentinc/cp-zookeeper:7.1.0
+    - name: gitlab-registry.ozon.dev/betkin/device-api/confluentinc/cp-zookeeper:7.1.0
       alias: zookeeper
-    - name: $CI_REGISTRY/confluentinc/cp-kafka:7.1.0
+    - name: gitlab-registry.ozon.dev/betkin/device-api/confluentinc/cp-kafka:7.1.0
       alias: kafka
   variables:
     # enable network
