--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build:
   stage: build
   script:
     - apk add --update make curl git protoc protobuf protobuf-dev
-    - printf "$(echo `go version` | sed -E 's/.* go(.*) .*/\1/g')\n1.16" | sort -V | head -1
+    - go version
     - make deps-go
     - make build-go
   artifacts:
@@ -33,15 +33,18 @@ unit:
   script:
     - go test -json ./homework/09-unit-tests/... > out.json
     - cat out.json | gotestsum --format testname
+  allow_failure: true
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /^(test)|(release)\/.+$/
       when: always
+
 
 linter:
   stage: build
   image: gitlab-registry.ozon.dev/betkin/device-api/golangci/golangci-lint
   script:
     - golangci-lint run -v ./...
+  allow_failure: true
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /^(test)|(release)\/.+$/
       when: always
@@ -51,6 +54,7 @@ pre-commit:
   image: gitlab-registry.ozon.dev/betkin/device-api/kiwicom/pre-commit
   script:
     - pre-commit run -a
+  allow_failure: true
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /^(test)|(release)\/.+$/
       when: always
@@ -135,6 +139,7 @@ httptest:
     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   script:
     - echo "Run tests"
+  allow_failure: true
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /^(test|release)\/.+$/
       when: always
