--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ unit:
   stage: build
   image: gitlab-registry.ozon.dev/betkin/device-api/pricec/gotestsum
   script:
-    - go test -json homework/09-unit-tests > out.json
+    - go test -json ./homework/09-unit-tests > out.json
     - cat out.json | gotestsum --format testname
   allow_failure: true
   rules:
